--- a/thunderstore/thunderstore.toml
+++ b/thunderstore/thunderstore.toml
@@ -5,7 +5,7 @@ schemaVersion = "0.0.1"
 # The name of the team you are publishing as
 namespace = "flibber"
 # max 250 characters
-description = "Example mod description"
+description = "Library for helping with loading vanilla game assets."
 
 # Replace this with a correct repo URL if the default is not accurate
 websiteUrl = "https://github.com/flibber-hk/Silksong.AssetHelper"
@@ -16,7 +16,6 @@ containsNsfwContent = false
 [package.dependencies]
 BepInEx-BepInExPack_Silksong = "5.4.2304"
 MonoDetour-MonoDetour_BepInEx_5 = "0.7.7"
-silksong_modding-UnityHelper = "1.1.0"
 
 
 # in most cases you should not change this build block, or the first build.copy block; the dist and tmp directories are used
@@ -42,4 +41,4 @@ communities = [ "hollow-knight-silksong" ]
 
 [publish.categories]
 # available categories can be found at https://github.com/thunderstore-io/ecosystem-schema/blob/master/games/data/hollow-knight-silksong.yml
-hollow-knight-silksong = [ "mods" ]
+hollow-knight-silksong = [ "mods", "libraries" ]
