--- a/AssetHelper/AssetHelper.csproj
+++ b/AssetHelper/AssetHelper.csproj
@@ -24,7 +24,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageIcon>icon.png</PackageIcon>
     <PackageId>Silksong.AssetHelper</PackageId>
-    <RepositoryUrl>https://github.com/flibber-hk/Silksong.AssetHelper</RepositoryUrl>
+    <RepositoryUrl>https://github.com/silksong_modding/Silksong.AssetHelper</RepositoryUrl>
     <Description>Library for helping with loading vanilla Silksong assets.</Description>
     <NeutralLanguage>EN</NeutralLanguage>
   </PropertyGroup>
@@ -111,7 +111,7 @@
     <!-- Local install -->
     <Copy
       SourceFiles="@(Binaries)"
-      DestinationFolder="$(SilksongPluginsFolder)/flibber-$(AssemblyTitle)/%(Binaries.LocalDir)"
+      DestinationFolder="$(SilksongPluginsFolder)/silksong_modding-$(AssemblyTitle)/%(Binaries.LocalDir)"
       Condition="'$(SilksongPluginsFolder)' != '' And Exists('$(SilksongPluginsFolder)')"
     />
 
