--- a/thunderstore/assethelper.toml
+++ b/thunderstore/assethelper.toml
@@ -3,12 +3,12 @@ schemaVersion = "0.0.1"
 
 [package]
 # The name of the team you are publishing as
-namespace = "flibber"
+namespace = "silksong_modding"
 # max 250 characters
 description = "Library for helping with loading vanilla game assets."
 
 # Replace this with a correct repo URL if the default is not accurate
-websiteUrl = "https://github.com/flibber-hk/Silksong.AssetHelper"
+websiteUrl = "https://github.com/silksong-modding/Silksong.AssetHelper"
 containsNsfwContent = false
 
 
